-       Created "GET" route for "tables" (actually part of US-#4)
-       Updated "tables" to remove "seat" column and change
        properties of "reservation_id" to default to NULL value
- US-#4: (for User Story #4)
-       Continue working on User Story #4 tests
- US-#5: (for User Story #5)
-       Create DELETE request for /tables/:table_id/seat
-       Repaired corrupt migration files & fixtures/tables
- User#4: (for User Story #4)
-       Completed tests for User Story #4 tests
        by creating a link for the "reservation_id" in "tables"
- US-#6: (for User Story #6)
-       Created a new migration file to add a "status" column to the
        "reservations" table
-       Ran new migration in development, test, preview, and
        production environments
-       All environments are seeded with data
- rate:
        Added rate limiter function to app.js to resolve GitHub error/alert
- US-#7: (for User Story #7)
        Modified reservations.controller "list" function to check for a
        mobile_number query and if so, to use the given (from ReadMe) 
        "search" function in reservations.service to search for reservations 
        with a given phone number.
- US-#8: (for User Story #8)
<<<<<<< HEAD
- F-US-#2: (front end for User Story #2)
=======
- issues-#x: created to correct issues with User Stories 4, 5 and 6 that
        emerged after the back end files were completed. Also renamed 
        the "update" and "edit" functions in the reservations table
        to "updateStatus" and "update" for clarity.
- F-US-#1 (F for front end, User Story #1)
-       Wrote component NewReservation to create and save a new reservation. Also wrote a ReservationForm component that can be re-used that has the form with input fields. This can be used for create reservation, update reservation, and change status.
-        Created previous, today and next buttons on dashboard. They work locally but I'm unable to run tests.
>>>>>>> 06d858eb1496fdd83cb2b7f0ffe17506cd721779