@@ -7,69 +7,74 @@ function ReservationForm({ reservation, handleSubmit, handleChange }) {
     <form onSubmit={handleSubmit}>
       <fieldset>
         <div className="row ml-2 mb-2">
-          <label htmlFor="first_name" className="mr-2"></label>
-            First Name 
+          <div className="col-md-4">
+            <label htmlFor="first_name">First Name</label>
             <input
               id="first_name"
               name="first_name"
               type="text"
+              className="form-control"
               required={true}
               onChange={handleChange}
               value={reservation.first_name}
             />
-            <br></br>
-          
-          <span className="ml-4"></span>
-          <label htmlFor="last_name" className="mr-2">Last Name</label>
-          <input
-            id="last_name"
-            name="last_name"
-            type="text"
-            required={true}
-            onChange={handleChange}
-            value={reservation.last_name}
-          />
+          </div>
+          <div className="col-md-4">
+            <label htmlFor="last_name">Last Name</label>
+            <input
+              id="last_name"
+              name="last_name"
+              type="text"
+              className="form-control"
+              required={true}
+              onChange={handleChange}
+              value={reservation.last_name}
+            />
+          </div>
         </div>
-        <div className="row ml-2">
-          <br></br>
-          <label htmlFor="mobile_number" className="mr-2"></label>
-          Mobile Number
+        <div className="row ml-2 mb-2">
+          <div className="col-md-4">
+          <label htmlFor="mobile_number" className="mr-2">Mobile Number</label>
           <input
             id="mobile_number"
             name="mobile_number"
             type="text"
+            className="form-control"
             required={true}
             onChange={handleChange}
             value={reservation.mobile_number}
           />
-          <br></br>
+          </div>
         </div>
-        <br></br>
-        <div className="row ml-2">
-          <label htmlFor="reservation_date" className="mr-2">Reservation Date</label>
+        <div className="row ml-2 mb-2">
+          <div className="col-md-3">
+          <label htmlFor="reservation_date" className="mr-2">Reservation Date</label>  
           <input
             id="reservation_date"
             name="reservation_date"
             type="date"
+            className="form-control"
             required={true}
             onChange={handleChange}
             value={reservation.reservation_date}
           />
-        </div>
-        <br></br>
-        <div className="row ml-2">
+          </div>
+       
+        <div className="col-md-3">
           <label htmlFor="reservation_time">Reservation time</label>
           <input
             id="reservation_time"
             name="reservation_time"
             type="time"
+            className="form-control"
             required={true}
             onChange={handleChange}
             value={reservation.reservation_time}
           />
         </div>
-        <br></br>
+        </div>
         <div className="row ml-2">
+          <div className="col-md-2">
           <label htmlFor="people" className="mr=3">Number of Guests</label>
           <input
             id="people"
@@ -79,12 +84,15 @@ function ReservationForm({ reservation, handleSubmit, handleChange }) {
             onChange={handleChange}
             value={reservation.people}
           />
+          </div>
         </div>
         <div className="mt-4 ml-4">
-        <button type="submit" className="mr-3">Submit</button>
-        <button type="cancel" onClick={() => history.goBack()}>
-          Cancel
-        </button>
+          <button type="submit" className="mr-3">
+            Submit
+          </button>
+          <button type="cancel" onClick={() => history.goBack()}>
+            Cancel
+          </button>
         </div>
       </fieldset>
     </form>
